--- a/SitePromotion/css/materialize.css
+++ b/SitePromotion/css/materialize.css
@@ -2727,7 +2727,7 @@ video.responsive-video {
 .pagination li {
   display: inline-block;
   border-radius: 2px;
-  text-align: center;
+  text-align: justify;
   vertical-align: top;
   height: 30px;
 }
@@ -2937,7 +2937,7 @@ ul.staggered-list li {
 
 @media only screen and (max-width: 600px) {
   .center-on-small-only {
-    text-align: center;
+    text-align: justify;
   }
 }
 
@@ -3000,7 +3000,7 @@ table.highlight > tbody > tr:hover {
 }
 
 table.centered thead tr th, table.centered tbody tr td {
-  text-align: center;
+  text-align: justify;
 }
 
 tr {
@@ -3010,7 +3010,7 @@ tr {
 td, th {
   padding: 15px 5px;
   display: table-cell;
-  text-align: left;
+  text-align: justify;
   vertical-align: middle;
   border-radius: 2px;
 }
@@ -3033,7 +3033,7 @@ td, th {
     vertical-align: top;
   }
   table.responsive-table th {
-    text-align: left;
+    text-align: justify;
   }
   table.responsive-table thead {
     display: block;
@@ -3059,12 +3059,12 @@ td, th {
   }
   table.responsive-table th {
     display: block;
-    text-align: right;
+    text-align: justify;
   }
   table.responsive-table td {
     display: block;
     min-height: 1.25em;
-    text-align: left;
+    text-align: justify;
   }
   table.responsive-table tr {
     border-bottom: none;
@@ -3114,7 +3114,7 @@ td, th {
   line-height: 42px;
   color: #fff;
   background-color: #999;
-  text-align: center;
+  text-align: justify;
 }
 
 .collection .collection-item.avatar .title {
@@ -3320,6 +3320,10 @@ td, th {
   text-align: right;
 }
 
+.justify-align {
+  text-align : justify;
+}
+
 .center, .center-align {
   text-align: center;
 }
@@ -3365,7 +3369,7 @@ span.badge {
   min-width: 3rem;
   padding: 0 6px;
   margin-left: 14px;
-  text-align: center;
+  text-align: justify;
   font-size: 1rem;
   line-height: 22px;
   height: 22px;
@@ -5064,7 +5068,7 @@ small {
 
 .tabs .tab {
   display: inline-block;
-  text-align: center;
+  text-align: justify;
   line-height: 48px;
   height: 48px;
   padding: 0;
@@ -5138,7 +5142,7 @@ small {
   line-height: 120%;
   opacity: 0;
   position: absolute;
-  text-align: center;
+  text-align: justify;
   max-width: calc(100% - 4px);
   overflow: hidden;
   left: 0;
@@ -5251,7 +5255,7 @@ small {
   text-decoration: none;
   color: #fff;
   background-color: #26a69a;
-  text-align: center;
+  text-align: justify;
   letter-spacing: .5px;
   -webkit-transition: background-color .2s ease-out;
   transition: background-color .2s ease-out;
@@ -5329,7 +5333,7 @@ small {
 .btn-floating i {
   width: inherit;
   display: inline-block;
-  text-align: center;
+  text-align: justify;
   color: #fff;
   font-size: 1.6rem;
   line-height: 40px;
@@ -5357,7 +5361,7 @@ button.btn-floating {
 }
 
 .fixed-action-btn.direction-left ul, .fixed-action-btn.direction-right ul {
-  text-align: right;
+  text-align: justify;
   right: 64px;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -5378,7 +5382,7 @@ button.btn-floating {
 }
 
 .fixed-action-btn.direction-right ul {
-  text-align: left;
+  text-align: justify;
   direction: rtl;
   left: 64px;
   right: auto;
@@ -5462,7 +5466,7 @@ button.btn-floating {
 .fixed-action-btn ul {
   left: 0;
   right: 0;
-  text-align: center;
+  text-align: justify;
   position: absolute;
   bottom: 64px;
   margin: 0;
@@ -5566,7 +5570,7 @@ button.btn-floating {
   min-height: 50px;
   line-height: 1.5rem;
   width: 100%;
-  text-align: left;
+  text-align: justify;
 }
 
 .dropdown-content li:hover, .dropdown-content li.active {
@@ -5729,7 +5733,7 @@ body.keyboard-focused .dropdown-content li:focus {
 }
 
 .waves-circle {
-  text-align: center;
+  text-align: justify;
   width: 2.5em;
   height: 2.5em;
   line-height: 2.5em;
@@ -5785,7 +5789,7 @@ body.keyboard-focused .dropdown-content li:focus {
   padding: 4px 6px;
   height: 56px;
   width: 100%;
-  text-align: right;
+  text-align: justify;
 }
 
 .modal .modal-footer .btn, .modal .modal-footer .btn-large, .modal .modal-footer .btn-small, .modal .modal-footer .btn-flat {
@@ -5863,7 +5867,7 @@ body.keyboard-focused .dropdown-content li:focus {
   width: 2rem;
   font-size: 1.6rem;
   display: inline-block;
-  text-align: center;
+  text-align: justify;
   margin-right: 1rem;
 }
 
@@ -6074,7 +6078,7 @@ body.keyboard-focused .dropdown-content li:focus {
   bottom: 0;
   left: 0;
   width: 100%;
-  text-align: center;
+  text-align: justify;
   padding: 0% 15%;
   height: 50px;
   z-index: 1000;
@@ -7365,7 +7369,7 @@ input[type=range] + .thumb {
 input[type=range] + .thumb .value {
   display: block;
   width: 30px;
-  text-align: center;
+  text-align: justify;
   color: #26a69a;
   font-size: 0;
   -webkit-transform: rotate(45deg);
@@ -8413,7 +8417,7 @@ input[type=range]::-ms-thumb {
 
 .carousel .indicators {
   position: absolute;
-  text-align: center;
+  text-align: justify;
   left: 0;
   right: 0;
   bottom: 0;
@@ -8477,10 +8481,19 @@ input[type=range]::-ms-thumb {
   visibility: visible;
   -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
           animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-  -webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
 }
 
 .tap-target {
@@ -8533,10 +8546,19 @@ input[type=range]::-ms-thumb {
 
 .tap-target-wave::after {
   visibility: hidden;
-  -webkit-transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s;
-  transition: opacity .3s, transform .3s, visibility 0s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s,
+ -webkit-transform .3s;
   z-index: -1;
 }
 
@@ -8662,7 +8684,7 @@ input[type=range]::-ms-thumb {
 
 .datepicker-controls .select-wrapper input {
   border-bottom: none;
-  text-align: center;
+  text-align: justify;
   margin: 0;
 }
 
@@ -8735,7 +8757,7 @@ input[type=range]::-ms-thumb {
 
 .datepicker-table th {
   padding: 10px 5px;
-  text-align: center;
+  text-align: justify;
 }
 
 .datepicker-table tr {
@@ -8874,7 +8896,7 @@ input[type=range]::-ms-thumb {
 .timepicker-text-container {
   font-size: 4rem;
   font-weight: bold;
-  text-align: center;
+  text-align: justify;
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
   position: relative;
@@ -8947,7 +8969,7 @@ input[type=range]::-ms-thumb {
   border-radius: 50%;
   color: rgba(0, 0, 0, 0.87);
   line-height: 40px;
-  text-align: center;
+  text-align: justify;
   width: 40px;
   height: 40px;
   position: absolute;
@@ -9052,7 +9074,7 @@ input[type=range]::-ms-thumb {
     position: relative;
     right: auto;
     bottom: auto;
-    text-align: center;
+    text-align: justify;
     margin-top: 1.2rem;
   }
 }
