--- a/SitePromotion/css/materialize.css
+++ b/SitePromotion/css/materialize.css
@@ -8350,7 +8350,7 @@ input[type=range]::-ms-thumb {
 }
 
 .slider .indicators .indicator-item.active {
-    background-color: #64B5F6;
+  background-color: #4CAF50;
 }
 
 .carousel {
