--- a/instazz/src/App.css
+++ b/instazz/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -90,9 +87,13 @@ p {
     font-size: calc(10px + 2vmin);
     color: white;
 }
+.App-corps-diapo{
+    margin-left: 5%;
+    margin-right: 5%;
+}
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 
@@ -174,6 +175,7 @@ p {
 .App-button {
     width: auto;
     padding: 20px 20px;
+    margin: 20px 20px;
     color: #26a5ce;
     background-color: white;
     border: 1px solid rgba(33, 150, 243, 0.5);
@@ -266,8 +268,8 @@ body {
 .inp-textarea {
     position: relative;
     margin: 12px auto;
-    width: auto;
-    max-width: 400px;
+    width:auto;
+    max-width: 90%;
     min-height: 100px;
 }
 
@@ -316,4 +318,149 @@ body {
     transform: translateX(20px) translateY(+14px) scale(0.75);
     padding: 5px;
     background-color: white;
+}
+
+
+.App-card-post {
+    display: block;
+    transition-duration: 0.3s;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.App-grid-post {
+    display: flex;
+}
+
+
+
+
+form label, form button {
+    width: auto;
+    padding: 5px 10px;
+    color: #26a5ce;
+    background-color: white;
+    border: 1px solid rgba(33, 150, 243, 0.5);
+    border-radius: 8px;
+    border-color: #26a5ce;
+    font-size: 16px;
+}
+
+form label:hover, form button:hover {
+    background-color: #e6f3f8;
+    border: 1px solid rgba(33, 150, 243, 0.5);
+}
+
+form input {
+    display: none;
+}
+
+
+.App-subTitle {
+    text-align: left;
+    color: #26a5ce;
+    font-size: 13px;
+}
+
+.App-title-user {
+    text-align: left;
+    font-size: 20px;
+    color: #26a5ce;
+    margin: 0px;
+    padding: 0px;
+}
+
+.App-corps-title {
+    text-align: left;
+    font-size: 18px;
+    color: #26a5ce;
+    margin: 0px;
+    padding: 0px;
+}
+.App-corps-text {
+    text-align: left;
+    font-size: 14px;
+    color: black;
+    margin-left: 100px;
+    padding: 0px;
+}
+
+.App-title-date {
+    text-align: left;
+    font-size: 12px;
+    color: #d3d3d3;
+}
+
+.App-Avatar-medium {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #fff;
+    line-height: 50px;
+    text-align: center;
+    background: #26a5ce;
+}
+
+.App-Avatar-small {
+    align-self:flex-start;
+    width: 25px;
+    height: 25px;
+    border-radius: 25px;
+    font-size: 20px;
+    color: #fff;
+    line-height: 25px;
+    text-align: center;
+    background: #26a5ce;
+}
+
+.App-post-text {
+    text-align: justify;
+    font-size: 14px;
+}
+
+.App-post-img {
+    height: 0;
+    padding-top: 56.25%; /*16:9*/
+}
+
+.App-card-action {
+    display: flex;
+}
+
+
+.App-send-comment{
+    top: 60%;
+}
+
+.App-icon {
+    color: #26a5ce;
+}
+
+.App-expand-list{
+    margin: 0px;
+    padding-bottom: 0px;
+}
+
+.App-comment {
+    text-align: justify;
+    font-size: 14px;
+    color: black;
+}
+
+.App-div-comment {
+    width: 90%;
+    padding: 0px 10px;
+    line-height: 1.4;
+}
+
+.App-Avatar-big {
+    width: 300px;
+    height: 300px;
+    border-radius: 300px;
+    font-size: 20px;
+    color: #fff;
+    line-height: 300px;
+    text-align: center;
+    background: #26a5ce;
 }
