--- a/instazz/src/App.css
+++ b/instazz/src/App.css
@@ -289,7 +289,7 @@ body {
     width:86%;
     border: 0;
     font-family: inherit;
-    padding: 12px 7%;
+    padding: 12px 5%;
     font-size: 16px;
     font-weight: 500;
     border: 1px solid #d3d3d3;
@@ -573,4 +573,14 @@ form input {
     vertical-align: top;
     display: block;
     width: 250px;
+}
+
+hr {
+    width: 96%;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
